FIxed scroll bug, remaining strange scrollbar

--- a/src/app/city-portrait/city-portrait.component.scss
+++ b/src/app/city-portrait/city-portrait.component.scss
@@ -1,5 +1,11 @@
 @import '../../common-vars.scss';
 
+.main-city-portrait-wrapper {
+  display: flex;
+  flex-direction: row;
+  height: 930px; 
+}
+
 .city-portrait-main {
   height: 100%;
   overflow-y: scroll;
@@ -7,7 +13,8 @@
 
 .city-portraits {
   overflow-y: scroll;
-  height: calc(100vh - 143px);
+  height: calc(100vh - 150px);
+  max-height: calc(100vh - 150px);
 }
 
 .city-portrait {
@@ -31,6 +38,6 @@
 }
 
 .letter-overview {
-  overflow-x: auto;
-  height: 938px;
+  overflow-x: scroll;
+  height: 930px;
 }
