--- a/src/app/letters-display/letters-display.component.scss
+++ b/src/app/letters-display/letters-display.component.scss
@@ -16,8 +16,8 @@
 }
 
 .nav-column {
-  display: flex;
-  width: 60px;
+  // display: flex;
+  // width: 60px;
 }
 
 .letter-overview {
